--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.4.0",
     "sass": "^1.82.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
