--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,19 +13,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: "18"
+          bun-version: "latest"
 
-      - name: Install dependencies
-        run: npm ci --force
+      - name: Install dependencies using Bun
+        run: bun install --frozen-lockfile
 
       - name: Clean old build
         run: rm -rf ./dist
 
-      - name: Build project
-        run: npm run build
+      - name: Build project using Bun
+        run: bun run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
