--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.14",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
